# noj-cli

./: .gitignore  LICENSE  README.md  noj  pyproject.toml
.noj/: .config.example.json
cli/: __main__.py
cli/command/: copycat.py  homework.py  ip_filter.py  main.py  noj.py  problem.py  submission.py  user.py
cli/core/: __init__.py  auth.py  config.py  context.py  course.py  grade.py  homework.py  problem.py  submission.py  user.py  util.py
