[tool.poetry]
name = "cli"
version = "0.1.0"
description = ""
authors = ["bogay <pojay11523@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
click = "^8.0.3"

[tool.poetry.dev-dependencies]
pylint = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
