[tool.poetry]
name = "cli"
version = "0.1.0"
description = ""
authors = ["bogay <pojay11523@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ntnu-cp/noj-cli"
repository = "https://github.com/ntnu-cp/noj-cli"
include = ["LICENSE"]

[tool.poetry.scripts]
noj = "cli.__main__:main"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
click = "~=8.1.0"
# mosspy = "^1.0.9"
# beautifulsoup4 = "^4.10.0"
# matplotlib = "^3.5.1"
# mossum = {git = "https://github.com/hjalti/mossum", rev = "master"}
# pandas = "^1.4.0"
tqdm = "^4.64.0"

[tool.poetry.group.dev.dependencies]
pylint = "^2.11.1"
yapf = "^0.32.0"
commitizen = "^2.20.4"
toml = "^0.10.2"
pycparser = "^2.21"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
